# gitgcui

./: README.md  pyproject.toml
gitgcui/: git.py  main.py
tests/: test_git.py
