[tool.poetry]
name = "gitgcui"
version = "0.1.0"
description = "A GUI tool for view and gc Git repos"
authors = ["ionling <soarvision@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.23.2"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
